fix the dollar sign

--- a/Revenue Trend Forecasting.ipynb
+++ b/Revenue Trend Forecasting.ipynb
@@ -4771,7 +4771,7 @@
     "\n",
     "I chose the evaluation metrics from the 1-day rolling window instead of the baseline forecast because it is more accurate.\n",
     "- RMSE is 5,458, meaning that, on average, predictions are off by R\\$5,458 revenue/day.\n",
-    "- PIW (Prediction Interval Width) is 26,066 for the 1-day rolling window, meaning that prediction ranges are R\\$26,066 revenue wide (e.g., R\\$10,000–R\\$36,066).\n",
+    "- PIW (Prediction Interval Width) is 26,066 for the 1-day rolling window, meaning that prediction ranges are `R$26,066` revenue wide (e.g., `R$10,000`–`R$36,066`).\n",
     "- PIC (Prediction Interval Coverage) is 97, meaning 97% of actual sales fall within the predicted range.\n",
     "- MDA (Mean Directional Accuracy) is 70, meaning that 70% of trend predictions (up/down compared to yesterday) are correct.\n",
     "- Forecast bias (deviation) is -1,454, meaning the model tends to underpredict by R\\$1,454 revenue."
@@ -5447,7 +5447,7 @@
    "source": [
     "**Insight**\n",
     "- The forecast error on revenue is about 13.4% of the daily revenue, meaning the model deviates on average by R\\$5,458 daily. This is a substantial variation given the revenue magnitude and directly impacts profitability and costs.\n",
-    "- The costs associated with forecasting errors (lost profit + inventory holding) sum to over R&dollar;1,600 daily, leading to a monthly loss exceeding R&dollar;50,000. Under-prediction carries a higher penalty, reflecting lost sales/profit impact."
+    "- The costs associated with forecasting errors (lost profit + inventory holding) sum to over `R$1,600` daily, leading to a monthly loss exceeding `R$50,000`. Under-prediction carries a higher penalty, reflecting lost sales/profit impact."
    ]
   },
   {
